minor spacing issue in search results

--- a/front-end/src/assets/base.css
+++ b/front-end/src/assets/base.css
@@ -234,7 +234,8 @@ button,
 .search-results-container {
   display: flex;
   flex-direction: column;
-  gap: var(--wac--accessible-spacing--1x);
+  gap: var(--wac--accessible-spacing--2x);
+  scrollbar-width: none;
 }
 
 .search-results {
